Adicionado Menu "Teste" ao NavigationDrawer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,18 @@
 <resources>
     <string name="app_name">SmartMonitor</string>
-<!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
-<!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
+    <!--    <string name="navigation_drawer_open">Open navigation drawer</string>-->
+    <!--    <string name="navigation_drawer_close">Close navigation drawer</string>-->
     <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Configurações</string>
 
-<!--    <string name="home_second">Home Second</string>-->
+    <!--    <string name="home_second">Home Second</string>-->
 
     <string name="menu_principal">Principal</string>
     <string name="menu_sistema">Conf. tempo de sistema</string>
     <string name="menu_aplicativos">Conf. tempo de aplicativos</string>
+    <string name="menu_teste">Teste</string>
 
     <string name="tempo_uso_diario">Tempo máximo de uso diário:</string>
     <string name="tempo_uso_continuo">Tempo máximo de uso contínuo:</string>
